# vegF1

./: .gitignore  analyze_durations.py  audio_processor.py  dl-video.py  download_archive.txt  generate_words_syllables.py  main.py  pyproject.toml  replacements_log.txt  test_stretch.py  transcript.txt  word_lists.json
