[project]
name = "vegF1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "openai>=1.64.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "ruff>=0.9.7",
    "syllapy>=0.7.2",
    "tqdm>=4.66.2",
    "whisperx>=3.3.1",
    "yt-dlp>=2025.2.19",
]
